coverage and mutation testing of family converters
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>